--- a/res/layout/list_dynamic.xml
+++ b/res/layout/list_dynamic.xml
@@ -122,6 +122,7 @@
                 android:src="@drawable/comments_grey" />
 
             <TextView
+                android:id="@+id/dynamic_comment_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -134,6 +135,7 @@
         <!-- 分享 -->
 
         <LinearLayout
+            android:id="@+id/list_dynamic_image_like"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -147,13 +149,13 @@
             android:padding="15dp" >
 
             <ImageView
-                android:id="@+id/list_dynamic_image_like"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:contentDescription="@drawable/like_point_grey"
                 android:src="@drawable/like_point_grey" />
 
             <TextView
+                android:id="@+id/dynamic_like_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
