--- a/res/layout/list_view_recommend.xml
+++ b/res/layout/list_view_recommend.xml
@@ -6,13 +6,12 @@
 
     <!-- 玩家头像 -->
 
-    <ImageView
+    <com.yuanchuang.yohey.MyImageView
         android:id="@+id/recommend_image_user_head"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_margin="13.3dp"
-        android:contentDescription="@drawable/zhao_ri_tian_bu_fu"
-        android:src="@drawable/zhao_ri_tian_bu_fu" />
+        android:src="@drawable/yp_hey_background_image" />
 
     <LinearLayout
         android:layout_width="0dp"
